<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/scoreboard_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@color/white"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="70dp"

            android:gravity="center"
            android:text="@string/scoreboard"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/history_game_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"

            android:background="@color/white"
            android:contentDescription="@string/history_game_button"
            app:srcCompat="@drawable/history_button" />

        <ImageButton
            android:id="@+id/reset_game_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"

            android:background="@color/white"
            android:contentDescription="@string/reset_game"
            app:srcCompat="@drawable/cancel_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/scoreboard_header"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:id="@+id/first_column"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/first_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:visibility="visible"
                android:layout_margin="35dp"
                android:text="Nós"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/scoreboard_header"
                tools:ignore="HardcodedText,MissingConstraints" />

            <ImageButton
                android:id="@+id/first_button_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:layout_margin="50dp"
                android:contentDescription="@string/add_button"
                app:srcCompat="@android:drawable/arrow_up_float" />

            <TextView
                android:id="@+id/first_team_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="0"
                android:textSize="120sp"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/first_button_reduce"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:layout_margin="50dp"
                android:contentDescription="@string/reduce_button"
                app:srcCompat="@android:drawable/arrow_down_float" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/first_button_truco_add_3"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_gravity="center"

                android:background="@drawable/background_button"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="50dp"
                android:textStyle="bold"
                android:text="@string/truco_add_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"

            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:background="@color/color_button"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_column"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/second_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:visibility="visible"
                android:layout_margin="35dp"
                android:text="Eles"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/scoreboard_header"
                tools:ignore="HardcodedText,MissingConstraints" />

            <ImageButton
                android:id="@+id/second_button_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:layout_margin="50dp"
                android:contentDescription="@string/add_button"
                app:srcCompat="@android:drawable/arrow_up_float" />

            <TextView
                android:id="@+id/second_team_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="0"
                android:textColor="@color/white"
                android:textSize="120sp"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/second_button_reduce"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:layout_margin="50dp"
                android:contentDescription="@string/reduce_button"
                app:srcCompat="@android:drawable/arrow_down_float" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/second_button_truco_add_3"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_gravity="center"

                android:background="@drawable/background_button"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="50dp"
                android:text="@string/truco_add_3"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>